--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,8 +8,10 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": {
-    "src": "/(.*)",
-    "dest": "/"
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
