--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,15 +3,19 @@
   "version": 2,
   "builds": [
     { "src": "index.js", "use": "@vercel/node" },
-    {
-      "src": "src/***/*",
-      "use": "@vercel/static"
-    }
+    { "src": "src/***/*", "use": "@vercel/static" }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/src/$1"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.js": {}
+  }
 }
