--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,19 +3,26 @@
   "version": 2,
   "builds": [
     { "src": "index.js", "use": "@vercel/node" },
-    { "src": "src/***/*", "use": "@vercel/static" }
+    {
+      "src": "src/***/*",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/index.js"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/src/$1"
+      "dest": "/",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+      }
     }
   ],
   "functions": {
-    "api/**/*.js": {}
+    "api/**/*.js": {
+      "maxDuration": 300
+    }
   }
 }
